--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
+            android:theme="@style/Theme.Material3.Light"
+
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
