--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ChatActivity"
-            android:exported="false"
-            android:label="@string/title_activity_chat"
-            android:theme="@style/NoActionBar" />
+            android:exported="false" />
         <activity
             android:name=".EnrolledClassesActivity"
             android:exported="false" />
