fixed calendar crash bug + added calendarview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:name=".GroupChatActivity"
             android:exported="false" />
         <activity
-            android:name=".Calendar"
+            android:name=".CalendarActivity"
             android:exported="false" />
         <activity
             android:name=".ResourceActivity"
